# sne

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: code_quality.yml
_build/vcpkg/anyrpc/: CONTROL  portfile.cmake
_build/vcpkg/sne/: CONTROL  portfile.cmake
_build/vs2017/: SNE.sln  anyrpc.props  anyrpc.vcxproj  anyrpc.vcxproj.filters  common.props  cryptopp.props  debug.props  gtest.props  release.props  sne.base.test.vcxproj  sne.base.test.vcxproj.filters  sne.base.vcxproj  sne.base.vcxproj.filters  sne.client.vcxproj  sne.client.vcxproj.filters  sne.core.test.vcxproj  sne.core.test.vcxproj.filters  sne.core.vcxproj  sne.core.vcxproj.filters  sne.database.test.vcxproj  sne.database.test.vcxproj.filters  sne.database.vcxproj  sne.database.vcxproj.filters  sne.echo.test.vcxproj  sne.echo.test.vcxproj.filters  sne.launcher.vcxproj  sne.launcher.vcxproj.filters  sne.security.test.vcxproj  sne.security.test.vcxproj.filters  sne.security.vcxproj  sne.security.vcxproj.filters  sne.server.vcxproj  sne.server.vcxproj.filters  sne.sgp.test.vcxproj  sne.sgp.test.vcxproj.filters  sne.sgp.vcxproj  sne.sgp.vcxproj.filters  sne.srpc.test.vcxproj  sne.srpc.test.vcxproj.filters  sne.srpc.vcxproj  (+5 more)
cmake/: PrecompiledHeader.cmake
doc/: Doxyfile
examples/echo/: CMakeLists.txt  EchoClient.cpp  EchoClient.h  EchoConfig.cpp  EchoConfig.h  EchoMessage.h  EchoServer.cpp  EchoServer.h  EchoTest.cpp  EchoTestPCH.cpp  EchoTestPCH.h  Echoer.h
include/sne/: Common.h
include/sne/anyrpc_version/: version.h
include/sne/common/: Config.h.in  Macros.h  Platform.h  Types.h  Version.h
include/sne/core/: Exception.h
include/sne/core/fsm/: Event.h  (+2 more)
include/sne/database/: Connection.h  Database.h  DatabaseFactory.h  DatabaseManager.h  DatabaseManagerFactory.h  DatabaseTask.h
include/sne/srpc/: Exception.h  RpcContainers.h  RpcForwarder.h  RpcInterface.h  RpcNetwork.h  RpcPacketType.h  RpcPrototype.h  RpcReceiver.h  RpcTypes.h  RpcUnity3d.h
include/sne/test/: CallCounter.h  DummyStreamBuffer.h  StreamFixture.h
src/: CMakeLists.txt
src/base/: BasePCH.h  CMakeLists.txt
src/base/concurrent/: TaskScheduler.cpp
src/base/io_context/: AsioTimer.h  IoContext.cpp  IoContextAcceptor.cpp  IoContextConnector.cpp  IoContextTask.cpp
src/base/session/: BandwidthLimit.cpp  BandwidthLimit.h  CachedSessionManager.cpp  Session.cpp
src/base/utility/: Assert.cpp  LogManager.cpp  Logger.cpp  StackTracer.cpp  SystemUtil.cpp
src/client/: CMakeLists.txt  ClientPCH.h
src/core/: CMakeLists.txt  CorePCH.h
src/core/stream/detail/: IBitStream.cpp  IByteStream.cpp  OBitStream.cpp  OByteStream.cpp  SneStreamFactory.cpp
src/core/utility/: SmartPtr.cpp  Unicode.cpp  Win32Util.cpp
src/database/: DatabaseManager.cpp  DatabaseManagerFactory.cpp  DatabasePCH.cpp  DatabasePCH.h  DatabasePool.cpp  DatabasePool.h  DirectDatabaseManager.h  ProxyDatabaseManager.h  convert.sh
src/launcher/: LauncherConfig.cpp  LauncherConfig.h  LauncherPCH.cpp  LauncherPCH.h  sne.launcher.cpp
src/security/: CMakeLists.txt  SecurityPCH.cpp  SecurityPCH.h
src/security/cipher/: BlockCipherFactory.cpp  BlockCipherImpl.h  RsaCipher.cpp
src/security/hash/: AuthlogicSha512Hash.cpp
src/server/: CMakeLists.txt  ServerPCH.h
src/server/app/: ServerApp.cpp  SessionServerApp.cpp
src/server/common/: Property.cpp
src/server/config/: ConfigReaderFactory.cpp  IniFileConfigReader.cpp  IniFileConfigReader.h  ServerConfig.cpp
src/server/rcon/: Service.cpp
src/server/s2s/: ClientSideBridge.cpp  ClientSideBridge.h  ClientSideProxy.cpp  ManagedServerSideProxy.cpp  ServerSideBridge.cpp  ServerSideProxy.cpp  ServerSideProxyManager.cpp
src/server/session/: AbstractServerSideSessionFactory.cpp  ClientSideSession.cpp  ServerSideSession.cpp  ServerSideSessionManager.cpp
src/server/session/heartbeater/: HeartbeatReceiver.cpp  HeartbeatReceiver.h  HeartbeatSender.h
src/server/utility/: CrashHandler.cpp
src/sgp/: CMakeLists.txt  SgpPCH.cpp  SgpPCH.h
src/sgp/protocol/: PacketCoder.cpp  PacketCoderFactory.cpp
src/sgp/protocol/cs/: CsPacketCoder.h
src/sgp/protocol/security/: CipherKeyGenerator.cpp  CipherKeyGenerator.h  PacketSeedExchangerFactory.cpp  PacketSeedExchangerImpl.cpp  PacketSeedExchangerImpl.h  SecurePacketCoder.cpp  SecurePacketCoder.h  SecurePacketCoderFactory.cpp
src/sgp/session/: SgpMarshaller.cpp  SgpMarshaller.h  SgpSessionImplFactory.cpp
src/sgp/session/extension/: RpcingExtension.cpp
src/srpc/: CMakeLists.txt  RpcCommand.cpp  RpcForwarder.cpp  RpcNetwork.cpp  RpcReceiver.cpp  SrpcPCH.cpp  SrpcPCH.h
test/: CMakeLists.txt
test/base/: BaseTestPCH.cpp  BaseTestPCH.h  CMakeLists.txt  sne.base.test.cpp
test/base/concurrent/: TaskSchedulerTest.cpp
test/base/memory/: MemoryPoolTest.cpp  MessageBlockManagerTest.cpp  ObjectPoolTest.cpp  VariousMemoryAllocatorTest.cpp
test/base/protocol/: MemoryBlockStreamBufferTest.cpp
test/core/: CMakeLists.txt  CoreTestPCH.cpp  CoreTestPCH.h  sne.core.test.cpp
test/database/: AdoDatabaseTest.cpp  DatabaseTestPCH.cpp  DatabaseTestPCH.h  sne.database.test.cpp
test/security/: AesBlockCipherTest.cpp  AuthlogicSha512HashTest.cpp  CMakeLists.txt  RsaCipherTest.cpp  SecurityTestPCH.cpp  SecurityTestPCH.h  TeaBlockCipherTest.cpp  sne.security.test.cpp
test/sgp/: CMakeLists.txt  SgpTestPCH.cpp  SgpTestPCH.h  sne.sgp.test.cpp
test/sgp/protocol/: SecurePacketCoderTest.cpp
test/sgp/session/: CachedSessionManagerTest.cpp  TcpSessionAcceptorTest.cpp  TcpSessionTest.cpp  TcpSessionTestFixture.h  TestCachedSessionManager.h  TestClient.h  TestTcpSession.h  TestTcpSessionManager.h
test/srpc/: CMakeLists.txt  DummyRpcClient.cpp  DummyRpcClient.h  DummyRpcCommand.h  DummyRpcEvent.h  DummyRpcInterface.h  DummyRpcServer.cpp  DummyRpcServer.h  ForwardingFunctorTest.cpp  MockRpcNetwork.cpp  MockRpcNetwork.h  MultipleRpcReceiverTest.cpp  ReceivingFunctorTest.cpp  RpcCommandTest.cpp  RpcConainersTest.cpp  RpcEventTest.cpp  RpcForwarderTest.cpp  RpcIdTest.cpp  RpcReceiverTest.cpp  RpcTypesTest.cpp  SrpcTestPCH.cpp  SrpcTestPCH.h  sne.srpc.test.cpp
(+163 files in other folders)
